Implement GetBoxscore
